Desktop Afternoon 13 May 2019

--- a/5.md
+++ b/5.md
@@ -199,27 +199,28 @@ Many black intellectuals and artists, even those who campaigned vigorously for i
 
 [^46]:	Henry Louis Gates, “King of the Cats,” _The New Yorker_ (1996).
 
-Ellison’s criticism of racial liberalism appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that made it all too easy to assume there was a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Ellison took exception to Myrdal’s portrait of Negro culture as solely reactive to white power and the typical Negro personality as the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Although Myrdal had maintained that it was to the advantage of American Negroes to assimilate and acquiring traits dominant whites valued, Ellison countered that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. Nor should whites, who could join blacks in a mutual undertaking that would help “create a more human American.”[^47]
+The building blocks of Ellison's appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that made it all too easy to assume there was a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Ellison took exception to Myrdal’s portrait of Negro culture as solely reactive to white power and the typical Negro personality as the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Although Myrdal had maintained that it was to the advantage of American Negroes to assimilate and acquiring traits dominant whites valued, Ellison countered that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. True integration required white recognition of the value and a mutual undertaking to “create a more human American.”[^47]
 
 [^47]:	Ellison, “Shadow,” 339-41.
 
-Ellison’s masterpiece, _Invisible Man_ (1952) built upon his reaction to Myrdal. Rejecting the social realism of the protest novel, which to his mind reduced complex people to the sum total of social forces, Ellison aimed at a vital depiction of the quest for identity of his unnamed narrator, who is both “black and American.” The book certainly depicts outright racism in the Battle Royal scene in which black school boys engage in a rumble for the enjoyment of whites in the narrator’s Southern hometown and in the degrading stereotypes of the culture industries (the Sambo dolls being among the most notable example in the novel). Its main thrust, however, is the narrator’s engagement with the movements and ideologies that circulated among black people after Emancipation. Designed to demonstrate Negro initiative rather than Myrdalian passivity, written with “blues-toned laughter,” the novel as its goal “revealing the human universals hidden within the plight” of his narrator, creating grounds for white identification with black sensibilities. Ellison took the narrator through Washington self-help embodied in the Tuskegee-like college experience, the Marxism of the white-dominated Brotherhood, and the black nationalism of Ras, the Destroyer.[^48] Each provide a limited identity for the narrator and each fails to deliver on its promises. Self-help fails when the authoritarian college president Bledsoe punishes the narrator for showing a white liberal donor the underside of black life, the dissolute Jim Trueblood and the saloon filled with the bitter and traumatized black veterans of World War One. The Brotherhood’s Brother Jack preaches solidarity but reveals himself to be interested only to the degree he can manipulate embittered residents of Harlem. Ras’s hatred extends not only to whites but to blacks who work with them. Only by rejecting these false visions can the narrator be visible to himself.[^49]
+Ellison’s masterpiece, _Invisible Man_ (1952), elaborated his point. Rejecting the social realism of the protest novel, which to his mind reduced complex people to the sum total of social forces, Ellison depicted the quest for identity of his unnamed narrator, who is both “black and American.” The book details outright racism in the Battle Royal scene in which black school boys engage in a rumble for the enjoyment of whites in the narrator’s Southern hometown and in the degrading stereotypes of the culture industries (the Sambo dolls being among the most notable example in the novel). Its main thrust, however, is the narrator’s engagement with the movements and ideologies that circulated among black people after Emancipation. Designed to demonstrate Negro initiative rather than Myrdalian passivity, written with “blues-toned laughter,” the novel aspires to reveal “the human universals hidden within the plight” of his narrator. Ellison took the narrator through Washington self-help embodied in the Tuskegee-like college experience, the Marxism of the white-dominated Brotherhood, and the black nationalism of Ras, the Destroyer.[^48] Each provide a limited identity for the narrator and each fails to deliver on its promises. Self-help fails when the authoritarian college president Bledsoe punishes the narrator for showing a white liberal donor the underside of black life, the dissolute Jim Trueblood and the saloon filled with the bitter and traumatized black veterans of World War One. The Brotherhood’s Brother Jack preaches solidarity but reveals himself to be interested only to the degree he can manipulate embittered residents of Harlem. Ras’s hatred extends not only to whites but to blacks who work with them. Only by rejecting these false visions can the narrator be visible to himself.[^49]
 
 [^48]:	Ralph Ellison, “Introduction,” _Invisible Man_ (New York: Vintage Books [1952] 1981), xviii, xvi.
 
-[^49]:	Among the interesting views on the novel are Saul Bellow, “Man Underground: A Review of Ralph Ellison’s _Invisible Man_,” _Commentary_ (1952); Tracy Floreani, _Fifties Ethnicities : The Ethnic Novel and Mass Culture at Midcentury_ (Albany: State University of New York Press, 2013); Jay Garcia, _Psychology Comes to Harlem : Rethinking the Race Question in Twentieth-Century America_ (Baltimore: Johns Hopkins University Press, 2012); Lawrence Patrick Jackson, _The Indignant Generation: A Narrative History of African American Writers and Critics, 1934-1960_ (Princeton: Princeton University Press, 2011); An early effort to collate Ellison criticism is Alan Nadel, _Invisible Criticism: Ralph Ellison and the American Canon_ (Iowa City: University of Iowa Press, 1988); The definitive biography is Arnold. Rampersad, _Ralph Ellison: A Biography_ (New York: Alfred A. Knopf, 2007).
+[^49]:	For contemporary views of the novel, see Saul Bellow, “Man Underground: A Review of Ralph Ellison’s _Invisible Man_,” _Commentary_ (1952); Jay Garcia, _Psychology Comes to Harlem : Rethinking the Race Question in Twentieth-Century America_ (Baltimore: Johns Hopkins University Press, 2012); Lawrence Patrick Jackson, _The Indignant Generation: A Narrative History of African American Writers and Critics, 1934-1960_ (Princeton: Princeton University Press, 2011); and Alan Nadel, _Invisible Criticism: Ralph Ellison and the American Canon_ (Iowa City: University of Iowa Press, 1988); The definitive biography is Arnold Rampersad, _Ralph Ellison: A Biography_ (New York: Alfred A. Knopf, 2007).
 
-Not that invisibility lacks advantages. At points the narrator courts invisibility as when he dons glasses and a hat and is taken to be the shape-shifting Rinehart. Invisibility allows him to travel unrecognized and unencumbered by obligations. Yet it eventually proves no less fulfilling. Chased by Ras during the Harlem riots, he escapes by plunging down a manhole. As the novel ends, he is residing in a portion of a basement that no one else seems to know exists, illuminated by 1,369 lights with power siphoned off from the power company, smoking marijuana and listening to Louis Armstrong. He eventually realizes that while no one can define him, humans need others. His self-chosen withdrawal is not a legitimate response to those forces of conformity that prevent humans from keeping their “many parts.” Becoming visible does not mean becoming white. Early on while working for Liberty Paints, the narrator learns that the company’s famous Optic White is produced by adding ten drops of black paint, a testimony to the hybridity of American life. In conclusion, the narrator echoes the point: “America is woven of many strands; I would recognize them and let it so remain. It’s ‘winner take nothing’ that is the great truth of our country or of any country. Life is to be lived, not controlled; and humanity is won by continuing to play in the face of certain defeat. Our fate is to become one, and yet many” (576).
+
+Not that invisibility lacked advantages. At points the narrator courts invisibility as when he dons glasses and a hat and is taken to be the shape-shifting Rinehart. Invisibility allows him to travel unrecognized and unencumbered by obligations. Yet it eventually proves no less fulfilling than the ideologies. Chased by Ras during the Harlem riots, the narrator escapes by plunging down a manhole. As the novel ends, he is residing in a portion of a basement that no one else seems to know exists, illuminated by 1,369 lights with power siphoned off from the power company, smoking marijuana and listening to Louis Armstrong. He eventually realizes that while no one can define him, humans need others. His self-chosen withdrawal is not a legitimate response to those forces of conformity that prevent humans from keeping their “many parts.” Becoming visible does not mean becoming white. Early on while working for Liberty Paints, the narrator learns that the company’s famous Optic White is produced by adding ten drops of black paint, a testimony to the hybridity of American life. The invisible man concludes by iterating the point: “America is woven of many strands; I would recognize them and let it so remain. It’s ‘winner take nothing’ that is the great truth of our country or of any country. Life is to be lived, not controlled; and humanity is won by continuing to play in the face of certain defeat. Our fate is to become one, and yet many” (576).
 
 Even whites who were familiar with black culture often misunderstood it as primitive. The most infamous venture in racial borrowing among intellectuals was Norman Mailer’s “White Negro.” The essay joined the bohemian spirit to black culture, lauding the ways in which both Beats and blacks stood against the conformist, “totalitarian tissues” of American society. In Mailer’s telling, Negroes have been living on the margin, embracing danger and had no need for the “sophisticated inhibitions of civilization.” Praising blacks’ ability to live in the enormous present, indulging in “Saturday night kicks,” and relinquishing “the pleasures of the mind for the more obligatory pleasures of the body,” Mailer championed the ability to give voice to joy, lust, and despair in jazz. “For jazz is orgasm, it is the music of orgasm, good orgasm and bad. . . communication by art because it said ‘I feel this, and now you do too.’”[^50]
 
 [^50]:	Norman Mailer, “The White Negro,” _Dissent_ (Fall, 1957): https://www.dissentmagazine.org/online\_articles/the-white-negro-fall-1957, accessed 26 June 2017.
 
-Black intellectuals found the alliance Mailer proposed unappealing, since it cast black folk as creatures of id, who lacked bourgeois restraint and a work ethos. Ellison complained to his friend Albert Murray that Mailer, deluded that all “hipsters are cocksmen possessed of great euphoric orgasms,” had placed “the same old primitivism crap in a new package.” James Baldwin observed Mailer was a poseur. All jazzmen he knew thought Mailer was a nice Jewish boy posing as an outlaw. Baldwin’s friend, the dramatist Lorraine Hansberry (1930-1965), gave credit to Mailer’s opposition to conformity and prudery, but criticized him for his misunderstanding of the complex nature of black culture. He was, she maintained, very much a “New Paternalist” who reworked old slurs to show liberation from “the hanky-panky of liberalism.” Endowing blacks with special sensuality, Hansberry continued, allowed Mailer to reduce Negroes to their oppression rather than recognize their full humanity. “White America has to believe ‘The Blacks are different --- and not only so, but that, by the mystique of this difference, they actually profit in certain charming ways which escape the rest of us with all our engrossing complexities.’”[^51]
+Black intellectuals saw little advantage in an alliance that cast black folk as creatures of id who lacked bourgeois restraint and a work ethos. Ellison complained to his friend Albert Murray that Mailer, deluded that all “hipsters are cocksmen possessed of great euphoric orgasms,” had placed “the same old primitivism crap in a new package.” To James Baldwin, Mailer was a poseur, a nice Jewish boy pretending to be an outlaw. Baldwin’s friend, the dramatist Lorraine Hansberry (1930-1965), gave Mailer credit for his opposition to conformity and prudery, but criticized his misunderstanding of the complex nature of black culture. She termed him a “New Paternalist” who reworked old slurs to show liberation from “the hanky-panky of liberalism.” By endowing blacks with special sensuality, Mailer reduced Negroes to their oppression rather than recognized their full humanity. “White America has to believe ‘The Blacks are different --- and not only so, but that, by the mystique of this difference, they actually profit in certain charming ways which escape the rest of us with all our engrossing complexities.’”[^51]
 
 [^51]:	Lorraine Hansberry, “Thoughts on Genet, Mailer, and the New Paternalism,” _The Village Voice_ (June 1, 1961): 10, 15.
 
-Hansberry’s extended defense of black culture against appropriation undercut a popular view of her famous play, _Raisin in the Sun_, as a tale about universal human persistence in the face of adversity. The New York _Times_ added to that impression when it misquoted her to the effect that she regarded herself as a playwright who just happened to be a Negro. In his 1967 classic _Crisis of the Negro Intellectual_, the Marxist-turned-black nationalist Harold Cruse considered _Raisin_ the swan song of the integrationist ideal of universalism. The play, he charged, was intended for white people and aspired to have black folk conform to white ideals. Because Hansberry was the daughter of Chicago realtors who brought and won the landmark case against restrictive covenants but who later were cited for buildings below code, Cruse declared that she knew little of black suffering. Proof of her privileged position and lack of connection with the realities of black life, Cruse insisted, was that the play turns on divvying up the $10,000 life insurance policy of the deceased patriarch, Big Walter Younger. That sum, according to Cruse, was an unrealistic one for the vast majority of black people. Still others have pointed to her willingness to point to aesthetic and political lessons from classical and Western sources as indicative of her universalist, integrationist aspirations.[^52]
+Hansberry was equally suspicious of facile claims of universalism, particularly those that interpreted her famous play *Raisin in the Sun* as a tale of the triumph of the human spirit. The New York _Times_ added to that impression when it misquoted her to the effect that she regarded herself as a playwright who just happened to be a Negro. In his 1967 classic _Crisis of the Negro Intellectual_, the Marxist-turned-black nationalist Harold Cruse considered _Raisin_ the swan song of the integrationist ideal of universalism. The play, he charged, was intended for white people and aspired to have black folk conform to white ideals. Because Hansberry was the daughter of Chicago realtors who brought and won the landmark case against restrictive covenants but who later were cited for buildings below code, Cruse declared that she knew little of black suffering. Proof of her privileged position and lack of connection with the realities of black life, Cruse insisted, was that the play turns on divvying up the $10,000 life insurance policy of the deceased patriarch, Big Walter Younger. That sum, according to Cruse, was an unrealistic one for the vast majority of black people. Still others have pointed to her willingness to point to aesthetic and political lessons from classical and Western sources as indicative of her universalist, integrationist aspirations.[^52]
 
 [^52]:	Harold Cruse, _The Crisis of the Negro Intellectual._ (New York: Morrow, 1967), 267-270, 420.
 
