Desktop 14 May 2019 morning

--- a/5.md
+++ b/5.md
@@ -195,11 +195,11 @@ Although he might have put it that way, it was telling that he did not. Stampp w
 
 [^45]:		Stanley M. Elkins, _Slavery; a Problem in American Institutional and Intellectual Life._ (Chicago: University of Chicago Press, 1959); Abram Kardiner and Lionel Ovesey, _The Mark of Oppression: A Psychosocial Study of the American Negro_ (New York: Norton, 1951).
 
-Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison saw in the blues an outlook that could be one the building blocks of a reconstituted American culture.[^46] Baldwin and Hansberry, on the other hand, were considerably more dubious about American ability to include people of color on anything approaching meaningful terms and while never full-blown separatists, admired black rebelliousness and independence.
+Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison envisioned black culture as a resource for a truly integrated and reconstituted American one. [^46] Baldwin and Hansberry, on the other hand, doubted white were eager or capable of including people of color on equal terms and while never full-blown separatists, admired black rebelliousness and independence.
 
 [^46]:	Henry Louis Gates, “King of the Cats,” _The New Yorker_ (1996).
 
-The building blocks of Ellison's appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that made it all too easy to assume there was a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Ellison took exception to Myrdal’s portrait of Negro culture as solely reactive to white power and the typical Negro personality as the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Although Myrdal had maintained that it was to the advantage of American Negroes to assimilate and acquiring traits dominant whites valued, Ellison countered that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. True integration required white recognition of the value and a mutual undertaking to “create a more human American.”[^47]
+The building blocks of Ellison's appeared in his unpublished review of Myrdal. Praising the book’s demonstration that “typical” Negro traits were not innate, he nonetheless objected to its over-reliance on the “sterile” concept of race that made it all too easy to assume there was a psychological barrier (by which Ellison meant affinities and ideas about each other) between the two groups. Ellison took exception to Myrdal’s portrait of Negro culture as solely reactive to white power and the typical Negro personality as the product of “social pathology.” Myrdal failed to acknowledge Negroes’ initiative and their ability to create themselves. It is, Ellison insisted, “only partially true that Negroes turn away from white patterns because they are refused participation. There is nothing like distance to create objectivity, and exclusion gives rise to counter values.” Although Myrdal had maintained that it was to the advantage of American Negroes to assimilate and acquiring traits dominant whites valued, Ellison countered that the American culture to which Negroes had to assimilate also had such pathologies as lynching, Hollywood movies, fadism, and radio advertising. Ellison saw unappreciated value in black music, folklore, cuisine, dance, dramaturgy, and a tragic comic sense found only in the blues. Negroes, he claimed, “will not willingly disregard” their heritage for the sake of integration. Black contributions from that heritage were necessary to “create a more human American.”[^47]
 
 [^47]:	Ellison, “Shadow,” 339-41.
 
@@ -224,7 +224,7 @@ Hansberry was equally suspicious of facile claims of universalism, particularly 
 
 [^52]:	Harold Cruse, _The Crisis of the Negro Intellectual._ (New York: Morrow, 1967), 267-270, 420.
 
-White audiences might well have found the play inspiring and, in its way, reassuring, but Hansberry was at pains to deny the play could have been about anyone. Such a formulation, she argued, flattered white liberals who talked so breezily about American equality. In fact, she told famed radio interviewer Studs Terkel that she was determined to dramatize the special black vantage point on life. Being black in America was self-evidently painful, even oppressive, but it also possessed resources of inspiration and resistance. Universality in drama, she maintained, came through “very great attention to the specific. It emerges from the truthful identity of what is.” The family at the heart of the play is definitively “first and foremost a Negro family. More precisely a Southside Chicago family for it was such a family that was formed in the specific living conditions and developed a specific set of reactions and goals as a result. What makes audiences think beyond the specifics was, ironically, must first be who they are before they can become everybody. So I would say it is definitely a Negro play before it is anything else.”[^53] _Raisin_ is filled with distinctive features of black history and culture. Walter’s sister, Beneatha, dates an African student, and adopts more natural dress and beauty standards, despite teasing from the rest of the family. When finally pushed by the “Welcoming Committee,” the younger Walter asserts family pride to refuse the pressure to leave and even fantasizes being like Kenyatta. The reference was only one of many to black revolutionaries in Hansberry’s plays.
+White audiences might well have found the play inspiring and even reassuring, but Hansberry sharply denied that the play could have easily featured any family. She saw such a formulation as a platitude that effaced the particularities of black oppression and resistance. Universality in drama, she maintained to famed radio interviewer Studs Terkel, came through “very great attention to the specific. It emerges from the truthful identity of what is.” The family at the heart of the play is definitively “first and foremost a Negro family. More precisely a Southside Chicago family for it was such a family that was formed in the specific living conditions and developed a specific set of reactions and goals as a result. What makes audiences think beyond the specifics was, ironically, must first be who they are before they can become everybody. So I would say it is definitely a Negro play before it is anything else.”[^53] _Raisin_ is filled with distinctive features of black history and culture. Walter’s sister, Beneatha, dates an African student, and adopts more natural dress and beauty standards, despite teasing from the rest of the family. When finally pushed by the “Welcoming Committee,” the younger Walter asserts family pride to refuse the pressure to leave and even fantasizes being like Kenyatta. The reference was only one of many to black revolutionaries in Hansberry’s plays.
 
 [^53]:	Lorraine Hansberry, _To be Young, Gifted and Black_ (Vintage, 1996), 128.
 
@@ -232,9 +232,7 @@ Hansberry’s cosmopolitanism prevented her embracing separatism. The Nation of 
 
 [^54]:	E. U. Essien-Udom, _Black Nationalism: A Search for an Identity in America_ (Chicago: University of Chicago Press, 1962); Theodore Draper, _The Rediscovery of Black Nationalism_(New York: Viking Press, 1970).
 
-People of color were not the only group that had to struggle against the belief that their innate nature disqualified them from full and equal participation in American life. Women too found their exclusion from certain spheres of American life justified by their nature. As popular media constantly reminded its audiences, women were naturally more passive, emotional, and sensitive to the needs of others. Consequently, they were less capable of making rational decisions or striving for individual achievement. As such, they were suited for support roles, not leadership and nurturing rather than production.
-
-It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how this conception of female capacities and inclinations obscured women’s universal humanity and prevented their full participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. That position ended when she was let go after she became pregnant with her second child. She then turned to freelancing for women’s magazines and it was while surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957 that she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
+Just as people of color rejected belief in diminished intellectual capacity and distorted values and inclinations, women moved toward inclusion by jettisoning beliefs in their supposedly more passive, emotional, and selfless natures -- qualities they allegedly made them less fit for making rational decisions or striving for individual achievement. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how the conception of women as nurturers obscured women’s universal humanity and prevented their full participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. That position ended when she was let go after she became pregnant with her second child. She then turned to freelancing for women’s magazines and it was while surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957 that she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
 
 [^55]:	Judith Hennessee, _Betty Friedan: Her Life_ (New York: Random House, 1999) and Daniel Horowitz, _Betty Friedan and the Making of the Feminine Mystique: The American Left, the Cold War, and Modern Feminism_ (Amherst: University of Massachusetts Press, 1998).
 
