--- a/5.md
+++ b/5.md
@@ -195,7 +195,7 @@ Although he might have put it that way, it was telling that he did not. Stampp w
 
 [^45]:		Stanley M. Elkins, _Slavery; a Problem in American Institutional and Intellectual Life._ (Chicago: University of Chicago Press, 1959); Abram Kardiner and Lionel Ovesey, _The Mark of Oppression: A Psychosocial Study of the American Negro_ (New York: Norton, 1951).
 
-Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison envisioned black culture as a resource for a truly integrated and reconstituted American one. [^46] Baldwin and Hansberry, on the other hand, doubted white were eager or capable of including people of color on equal terms and while never full-blown separatists, admired black rebelliousness and independence.
+Many black intellectuals and artists, even those who campaigned vigorously for integration, recoiled from the dismissal of blackness. Such figures as Ralph Ellison, Albert Murray, James Baldwin, and Lorraine Hansberry knew black people were not simply white people with black skins who lacked a culture of their own. Throughout the period in essays and in art they revealed, sometimes inadvertently, black mores and values. Their recognition of black distinctiveness did not, however, entail agreement about the future they desired. “Militant integrationists” in the words of Henry Louis Gates, Murray and Ellison envisioned black culture as a resource for a truly integrated and reconstituted American one. [^46] Baldwin and Hansberry, on the other hand, doubted white were eager or capable of including people of color on equal terms. Although never separatists or full-blown nationalists, both eventually expressed affinities and support for black rebels and revolutionaries .
 
 [^46]:	Henry Louis Gates, “King of the Cats,” _The New Yorker_ (1996).
 
@@ -232,7 +232,7 @@ Hansberry’s cosmopolitanism prevented her embracing separatism. The Nation of 
 
 [^54]:	E. U. Essien-Udom, _Black Nationalism: A Search for an Identity in America_ (Chicago: University of Chicago Press, 1962); Theodore Draper, _The Rediscovery of Black Nationalism_(New York: Viking Press, 1970).
 
-Just as people of color rejected belief in diminished intellectual capacity and distorted values and inclinations, women moved toward inclusion by jettisoning beliefs in their supposedly more passive, emotional, and selfless natures -- qualities they allegedly made them less fit for making rational decisions or striving for individual achievement. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how the conception of women as nurturers obscured women’s universal humanity and prevented their full participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. That position ended when she was let go after she became pregnant with her second child. She then turned to freelancing for women’s magazines and it was while surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957 that she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
+Just as people of color rejected long-standing beliefs about their supposed lesser intellectual capacity and distorted values and inclinations, so too did women pushing for inclusion discard prevailing notions of their more passive, emotional and selfless nature. Those beliefs had justified their relegation to nurturing and support roles. It was the aim of Betty Friedan’s _Feminine Mystique_ (1963) to expose how the conception of women as nurturers obscured women’s universal humanity and prevented their full participation in American life. A Smith College graduate, Friedan (1921-2006) won a psychology fellowship to work under Erik Erikson at Berkeley but, under pressure from her then boyfriend, abandoned Ph. D. work. She then turned to journalism, working for, among other places, the paper of the left-leaning United Electrical Workers. That position ended when she was let go after she became pregnant with her second child. She then turned to freelancing for women’s magazines and it was while surveying college graduates about the state of their post-collegiate lives for a presentation at her fifteenth college reunion in 1957 that she hit upon the topic that would form the basis of her magnum opus---the famous problem with no name.[^55]
 
 [^55]:	Judith Hennessee, _Betty Friedan: Her Life_ (New York: Random House, 1999) and Daniel Horowitz, _Betty Friedan and the Making of the Feminine Mystique: The American Left, the Cold War, and Modern Feminism_ (Amherst: University of Massachusetts Press, 1998).
 
